--- a/iphone/titanium.xcconfig
+++ b/iphone/titanium.xcconfig
@@ -1,4 +1,4 @@
-TITANIUM_SDK_VERSION = 5.2.2.GA
+TITANIUM_SDK_VERSION = 6.0.0
 
 TITANIUM_SDK = ~/Library/Application Support/Titanium/mobilesdk/osx/$(TITANIUM_SDK_VERSION)
 TITANIUM_BASE_SDK = "$(TITANIUM_SDK)/iphone/include"
