Ignore user-files

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ bin/**
 libs
 dist
 /iphone/ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hans.xcuserdatad/UserInterfaceState.xcuserstate
+/iphone/ti.applepay.xcodeproj/xcuserdata/hknoechel.xcuserdatad
+/iphone/ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hknoechel.xcuserdatad
