--- a/iphone/module.xcconfig
+++ b/iphone/module.xcconfig
@@ -1,3 +1,3 @@
-FRAMEWORK_SEARCH_PATHS=$(SRCROOT)/../../modules/iphone/ti.applepay/1.3.1/platform "~/Library/Application\ Support/Titanium/modules/iphone/ti.applepay/1.3.1/platform"
+FRAMEWORK_SEARCH_PATHS=$(SRCROOT)/../../modules/iphone/ti.applepay/1.3.2/platform "~/Library/Application\ Support/Titanium/modules/iphone/ti.applepay/1.3.2/platform"
 
-OTHER_LDFLAGS=$(inherited) -weak_framework PassKit -framework Stripe
+OTHER_LDFLAGS=$(inherited) -ObjC -weak_framework PassKit -framework Stripe
