--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ dist
 /iphone/ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hans.xcuserdatad/UserInterfaceState.xcuserstate
 /iphone/ti.applepay.xcodeproj/xcuserdata/hknoechel.xcuserdatad
 /iphone/ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hknoechel.xcuserdatad
+/iphone/ti.applepay-iphone-*.zip
