--- a/titanium.xcconfig
+++ b/titanium.xcconfig
@@ -1,4 +1,4 @@
-TITANIUM_SDK_VERSION = 6.3.0.GA
+TITANIUM_SDK_VERSION = 7.0.0.v20171117152921
 
 TITANIUM_SDK = ~/Library/Application Support/Titanium/mobilesdk/osx/$(TITANIUM_SDK_VERSION)
 TITANIUM_BASE_SDK = "$(TITANIUM_SDK)/iphone/include"
