Add iOS 12 API's

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hans.xcuserdatad/UserInterf
 ti.applepay.xcodeproj/xcuserdata/hknoechel.xcuserdatad
 ti.applepay.xcodeproj/project.xcworkspace/xcuserdata/hknoechel.xcuserdatad
 ti.applepay-iphone-*.zip
+ti.applepay.xcodeproj/project.xcworkspace/xcshareddata
